web-infras/parser/tests/fixtures/babel/core/opts/allowNewTargetOutsideFunction-false/output.txt
[SyntaxError]: `new.target` can only be used in functions or class properties. (1,11)
1|const x = new.target;
 |         ^
